add ingredients api
